[BUGFIX] Add overflow for content element preview in page module
Improve rendering of content elements in page module

Resolves: #70203
Releases: master
Reviewed-on: http://review.typo3.org/43650
Tested-by: Stefan Froemken <froemken@gmail.com>
Tested-by: Josef Glatz <jousch@gmail.com>
Tested-by: Andreas Fernandez <typo3@scripting-base.de>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -12860,6 +12860,7 @@ iframe {
 }
 .t3-page-ce .t3-page-ce-body-inner {
   padding: 10px;
+  word-wrap: break-word;
 }
 .t3-page-ce .t3-page-ce-header {
   -webkit-transition: background 0.15s ease-in;
